force-app/main/default/objects/Tracking_Information__c/Tracking_Information__c.object-meta.xml
<CustomObject>

    <label>Tracking Information</label>
    <nameField>
        <displayFormat>T- {0000}</displayFormat>
        <label>Tracking Information Name</label>

        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>