force-app/main/default/objects/Tracking_Information__c/fields/Current_Other_Outcome_Measures__c.field-meta.xml
<CustomField>
    <fullName>Current_Other_Outcome_Measures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description for Current Other Outcome measures</inlineHelpText>
    <label>Current Other Outcome Measures</label>

    <type>TextArea</type>
</CustomField>