force-app/main/default/objects/Tracking_Information__c/fields/Current_Primary_Outcome_Measures__c.field-meta.xml
<CustomField>
    <fullName>Current_Primary_Outcome_Measures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description for Current Primary Outcome Measures</inlineHelpText>
    <label>Current Primary Outcome Measures</label>

    <type>TextArea</type>
</CustomField>