force-app/main/default/objects/Tracking_Information__c/fields/Current_Secondary_Outcome_Measures__c.field-meta.xml
<CustomField>
    <fullName>Current_Secondary_Outcome_Measures__c</fullName>
    <description>Description for Current Secondary Outcome measures.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description for Current Secondary Outcome measures.</inlineHelpText>
    <label>Current Secondary Outcome Measures</label>

    <type>TextArea</type>
</CustomField>