force-app/main/default/objects/Tracking_Information__c/fields/MD5__c.field-meta.xml
<CustomField>
    <fullName>MD5__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MD5</label>
    <length>255</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>