force-app/main/default/objects/Tracking_Information__c/fields/Original_Other_Outcome_Measures__c.field-meta.xml
<CustomField>
    <fullName>Original_Other_Outcome_Measures__c</fullName>
    <description>Description for Original Other Outcome measures.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description for Original Other Outcome measures.</inlineHelpText>
    <label>Original Other Outcome Measures</label>

    <type>TextArea</type>
</CustomField>