force-app/main/default/objects/Tracking_Information__c/fields/Original_Primary_Outcome_Measures__c.field-meta.xml
<CustomField>
    <fullName>Original_Primary_Outcome_Measures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description for Original Primary Outcome Measures</inlineHelpText>
    <label>Original Primary Outcome Measures</label>

    <type>TextArea</type>
</CustomField>