force-app/main/default/objects/Tracking_Information__c/fields/Outcome_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcome Completion Date</label>
    <length>400</length>

    <type>LongTextArea</type>
</CustomField>