force-app/main/default/objects/Tracking_Information__c/fields/Outcome_Measure__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Measure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcome Measure</label>
    <length>255</length>

    <type>Text</type>
</CustomField>