force-app/main/default/objects/Tracking_Information__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcome Type</label>
    <length>255</length>

    <type>Text</type>
</CustomField>