force-app/main/default/objects/Tracking_Information__c/fields/Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Primary Key (External Use)</label>
    <length>255</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>